# agentic-trading-simulator

./: .env.example  .gitignore  LICENSE  README.md  app.py  config.py  main.py  pyproject.toml  setup-wsl.md  setups.md
notebooks/: accounts.py  experiments.ipynb  market.py  mcp.ipynb  push_server.py  revisions.ipynb
notebooks/sandbox/: banoffee.md
src/: orchestrator.py
src/agents/: researcher_agent.py  trader_agent.py
src/mcp/: accounts_mcp_client.py  accounts_mcp_server.py  market_mcp_server.py  mcp_params.py  push_mcp_server.py
src/portfolio/: accounts.py  db_operations.py  market.py
src/templates/: prompt_templates.py  trader_strategies.py
src/tools/: researcher_tool.py
src/utils/: reset_traders.py  tracers.py
